[gd_scene load_steps=5 format=3 uid="uid://cg6y52i0tim1n"]

[ext_resource type="Script" path="res://scripts/inventory.gd" id="1_rtxta"]
[ext_resource type="PackedScene" uid="uid://lueskagr4knl" path="res://scenes/InventoryButton.tscn" id="2_om5ms"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vg15m"]
bg_color = Color(0.0901961, 0.360784, 0.482353, 0.882353)

[sub_resource type="CircleShape2D" id="CircleShape2D_36od6"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rtxta")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 487.0
offset_top = 213.0
offset_right = 665.0
offset_bottom = 435.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_vg15m")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -110.0
offset_right = 88.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 4

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 975.0
offset_top = 586.0
offset_right = 1136.0
offset_bottom = 630.0
text = "Add Item"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 801.0
offset_top = 587.0
offset_right = 962.0
offset_bottom = 631.0
text = "Remove Item"

[node name="MouseArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
scale = Vector2(0.3, 0.3)
shape = SubResource("CircleShape2D_36od6")

[node name="InventoryButton" parent="MouseArea" instance=ExtResource("2_om5ms")]
visible = false
offset_left = -21.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 20.0

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="area_entered" from="MouseArea" to="." method="_on_mouse_area_area_entered"]
[connection signal="area_exited" from="MouseArea" to="." method="_on_mouse_area_area_exited"]
